5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1644_1054.log
== TEST (2019-04-04 19:13:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#Programa que ira ler as coordenadas

X = float(input("Digite a coordenada X: "))
Y = float(input("Digite a coordenada Y: "))

a = 2*x+y=3
-- ERROR:
File "XXXX", line 10
    a = 2*x+y=3
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:13:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#Programa que ira ler as coordenadas

X = float(input("Digite a coordenada X: "))
Y = float(input("Digite a coordenada Y: "))

2*x+y=3
-- ERROR:
File "XXXX", line 10
    2*x+y=3
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:14:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#Programa que ira ler as coordenadas

X = float(input("Digite a coordenada X: "))
Y = float(input("Digite a coordenada Y: "))

p = (2*x+y=3)
-- ERROR:
File "XXXX", line 10
    p = (2*x+y=3)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:14:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#Programa que ira ler as coordenadas

X = float(input("Digite a coordenada X: "))
Y = float(input("Digite a coordenada Y: "))

p(2*x+y=3)
-- ERROR:
File "XXXX", line 10
    p(2*x+y=3)
     ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:18:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#Programa que ira ler as coordenadas

X = float(input("Digite a coordenada X: "))
Y = float(input("Digite a coordenada Y: "))

if(2 * X + Y == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
	
print(mensagem)	
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:18:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#Programa que ira ler as coordenadas

X = float(input("Digite a coordenada X: "))
Y = float(input("Digite a coordenada Y: "))

if(2 * X + Y == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
	
print(mensagem)	
-- EXECUTION TIME:
0.17159
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
